--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta http-equiv="cache-control" content="no-cache" />
-<title>Welcome to the Bakery</title>
-<meta name="author" content="The Bakery">
-<meta name="description" content="The Bakery designs and builds delicious web applications for amazing companies">
+<title>Cafe de la Paix - Trento</title>
+<meta name="author" content="Cafe de la Paix">
+<meta name="description" content="Cafe de la Paix">
 <meta name="keywords" content="Startups,mvp,web applications,bakery">
 <meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,width=device-width,user-scalable=no" />
 <meta name="google-site-verification" content="oAtCq2fJ3CKZYBQ_D9JTXYl2zHopjqEF5IPzRun3IXk" />
-<link rel="stylesheet" type="text/css" href="styles/13083e04.main.css">
+<link rel="stylesheet" type="text/css" href="styles/95f03902.main.css">
 <link href='http://fonts.googleapis.com/css?family=Raleway:200,400' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,300italic' rel='stylesheet' type='text/css'>
 <link rel="icon" type="image/x-icon" href="images/icons/favicon.ico" />
@@ -34,10 +34,10 @@
     <div id="content"></div>
 
     <footer>
-    	<div class="fb-like" data-href="https://www.facebook.com/CafedelaPaixTN" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+
     </footer>
 
-    <script src="scripts/921e86ec.app.compiled.js"></script>
+    <script src="scripts/ae2fc555.app.compiled.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
